# supreme-broccoli

./: MANIFEST.in  README.md  pkg-structure  pyproject.toml
.github/agents/: mtc-enums.agent.md  mtc-expert.agent.md  mtc-models.agent.md  mtc-protocol.agent.md  mtc-transpiler.agent.md
.github/agents/data/: xmi-patterns.md
.github/workflows/: build-whl.yml
mtconnect/: __init__.py
mtconnect/models/: __init__.py  assets.py  components.py  compositions.py  configurations.py  data_items.py  references.py  relationships.py  values.py
mtconnect/protocol/: __init__.py  errors.py  header.py  responses.py  streams.py
mtconnect/types/: __init__.py  condition.py  enums.py  event.py  interface_types.py  primitives.py  sample.py  subtype.py
scripts/: extract_enums.py  extract_interfaces.py  generate_components.py  generate_compositions.py  generate_configurations.py  generate_data_items.py  generate_enums.py  generate_references.py  generator_utils.py  run_all_generators.py
tests/: conftest.py
tests/models/: test_components.py  test_generation.py
tests/protocol/: __init__.py  test_header.py
tests/types/: __init__.py  test_generate_enums.py  test_primitives.py  test_sample.py
